Changed font of "Stego Studios"

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -16,7 +16,12 @@ header {
     border-bottom: 1px solid #e5e7eb;
     background-color: #4CBB17;
     padding: 1px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    font-family: "Dangrek", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    /* font-family: "Prompt", sans-serif; */
+
     font-weight: bold;
     text-transform: uppercase;
     color: #1f2937;
@@ -35,7 +40,10 @@ img {
     gap: 20px;
     padding: 10px;
     color: white; 
-    font-family: Arial, Helvetica, sans-serif; 
+    /* font-family: Arial, Helvetica, sans-serif;  */
+    /* font-family: "Prompt", sans-serif;
+    font-weight: 100;
+    font-style: normal; */
 
 }
 
