--- a/src/styles/embla.css
+++ b/src/styles/embla.css
@@ -1,5 +1,6 @@
 .embla {
-  max-width: 48rem;
+  /* max-width: 48rem; */
+  width: 100%;
   margin: auto;
   --slide-height: 19rem;
   --slide-spacing: 1rem;
