--- a/src/styles/scrolling.css
+++ b/src/styles/scrolling.css
@@ -1,14 +1,16 @@
 .announcement {
-    background: green;
+    background: #004526;
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
-    font-size: 16px;
+    font-size: 45px;
+    font-weight: bold;
+    font-family: "Dangrek", sans-serif;
 }
 .marquee {
-    background: green;
+    background: #004526;
 }
 
 .announcement-text {
@@ -19,7 +21,7 @@
 }
 
 .text1 span{
-    margin-right: 2em;
+    margin-right: 0.5em;
 }
 
 .text2 span:not(:last-child) {
@@ -30,3 +32,20 @@
     margin-right: 1em;
 }
 
+.text3 span:not(:last-child) {
+    margin-right: 2rem;
+}
+
+.text3 span:last-child{
+    margin-right: 1em;
+}
+
+
+
+
+.oval {
+    height: 40px;
+    width: 30px;
+    background-color: #FFFFF0;
+    border-radius: 50%;
+  }
