Added a showcase section

--- a/src/styles/scrolling.css
+++ b/src/styles/scrolling.css
@@ -8,6 +8,7 @@
     font-size: 45px;
     font-weight: bold;
     font-family: "Dangrek", sans-serif;
+    height: 50px;
 }
 .marquee {
     background: #004526;
