--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,7 +8,10 @@ header {
     margin-right: auto;
     display: flex;
     width: 100%;  
-    height: auto;  
+    /* height: 110px; */
+    height: auto;
+    /* height: auto;   */
+    /* height should not be auto */ 
     max-width: none;  
     flex-wrap: wrap;
     align-items: center;
