--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -10,6 +10,7 @@
     flex: 1;
     display: flex;
     height: 400px;
+    position: relative;
 }
 
 .showcase-right {
@@ -17,51 +18,43 @@
     display: flex;
     justify-content: flex-end;
     height: 400px;
-    position: static;
+    position: relative;
 }
 
 .showcase-left img,
 .showcase-right img {
     height: 100%;
     width: auto;
-    max-width: 100%; 
-}
-.image-wrapper {
-  position: relative;
-  height: 100%;
+    max-width: 100%;
 }
 
 .overlay-div {
-  position: absolute;
-  top: 80px;
-  right: 20px;
-  background-color: #fbf5db;
-  color: black;
-  padding: 10px;
-  width: 450px;
-  height: 250px;
-  border: 10px solid #e8c45c;
-  outline: 3px solid #c09c3c;
-  box-shadow:  10px 15px 0 #c09c3c;
-  z-index: 10;
-  border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.showcase-left img:nth-child(2) {
-  margin-top: 45px;
-  position: relative;
-  left: -500px;
-  bottom: -40px;
-  width: 450px;
-  height: 250px;
-  border: 10px solid #70ac44;
-  outline: 3px solid #30442c;
-  box-shadow:  -10px 15px 0 #30442c;
-  
+.showcase-description {
+    background-color: #fbf5db;
+    color: black;
+    padding: 10px;
+    width: 450px;
+    height: 250px;
+    border: 10px solid #e8c45c;
+    outline: 3px solid #c09c3c;
+    box-shadow:  10px 15px 0 #c09c3c;
+    z-index: 10;
+    border-radius: 4px;
 }
 
-
-
+.overlay-div img {
+    width: 450px;
+    height: 250px;
+    border: 10px solid #70ac44;
+    outline: 3px solid #30442c;
+    box-shadow: -10px 15px 0 #30442c;
+}
 
 .overlay-div h1, p {
   display: block;
@@ -70,100 +63,22 @@
   /* margin-bottom: 8px; */
 }
 
-.second-row img:nth-child(2) {
-  margin-top: 45px;
-  position: relative;
-  left: 500px;
-  bottom: -40px;
-  width: 450px;
-  height: 250px;
-  border: 10px solid #70ac44;
-  outline: 3px solid #30442c;
-  box-shadow:  -10px 15px 0 #30442c;
-  
-}
-
-.third-row img:nth-child(3) {
-  margin-top: 45px;
-  position: relative;
-  left: -500px;
-  bottom: -40px;
-  width: 350px;
-  height: 200px;
-  border: 10px solid #70ac44;
-  outline: 3px solid #30442c;
-  box-shadow:  -10px 15px 0 #30442c;
-
-}
-
 @media (max-width: 768px) {
     .showcase-row {
-        flex-direction: column; 
+        flex-direction: column;
     }
-    .second-row {
-      flex-direction: column-reverse;
-    }
+
     .showcase-left,
     .showcase-right {
       /* height: 20px;
       width: auto; */
       height: auto; /* Let height adjust based on content */
       width: 100%;  /* Full width of the screen */
-
     }
 
     .showcase-left img:nth-child(1),
     .showcase-right img {
         width: 100%;
         height: auto;
-       
     }
-
-    .showcase-left img:nth-child(2) {
-      margin-top: 45px;
-      position: relative;
-      left: -390px;
-      bottom: 20px;
-      width: 350px;
-      height: 200px;
-      border: 10px solid #70ac44;
-      outline: 3px solid #30442c;
-      box-shadow:  -10px 15px 0 #30442c;
-      
-    }
-
-
-    .second-row img:nth-child(2) {
-      margin-top: 405px;
-      position: relative;
-      left: -400px;
-      bottom: 650px;
-      width: 350px;
-      height: 200px;
-      border: 10px solid #70ac44;
-      outline: 3px solid #30442c;
-      box-shadow:  -10px 15px 0 #30442c;
-    
-    }
-   
-}
-
-
-
-.creepycook {
-  position: relative;
-  top: -175px;
-  left: 460px;
-  display: flex;
-  flex-direction: column; /* Align items vertically */
-  align-items: flex-start; /* Align all child elements to the left */
-  font-size: 12px;
-}
-
-.creepycook p {
-  margin-bottom: 0px;
-}
-
-.creepybuttons {
-  margin-top: 10px;
 }
