--- a/src/styles/embla.css
+++ b/src/styles/embla.css
@@ -2,7 +2,7 @@
   /* max-width: 48rem; */
   width: 100%;
   margin: auto;
-  --slide-height: 19rem;
+  --slide-height: 50rem;
   --slide-spacing: 1rem;
   --slide-size: 100%;
 }
@@ -25,9 +25,9 @@
 }
 
 .embla__slide__img {
-  border-radius: 1.8rem;
   display: block;
-  height: var(--slide-height);
+  height: auto;
+  max-height: var(--slide-height);
   width: 100%;
   object-fit: cover;
 }
