--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,16 +1,10 @@
 header {
-  /* Remove or adjust max-width */
   position: sticky;
   top: 0;
   z-index: 1000;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   width: 100%;
-  /* height: 110px; */
   height: auto;
-  /* height: auto;   */
-  /* height should not be auto */
   max-width: none;
   flex-wrap: wrap;
   align-items: center;
@@ -18,42 +12,47 @@ header {
   border-bottom: 1px solid #e5e7eb;
   background-color: #4cbb17;
   padding: 1px;
-  /* font-family: sans-serif; */
   font-family: "Dangrek", sans-serif;
   font-weight: 400;
   font-style: normal;
-  /* font-family: "Prompt", sans-serif; */
-
   font-weight: bold;
   text-transform: uppercase;
   color: #1f2937;
   backdrop-filter: blur(100px);
   text-transform: none;
+  box-sizing: border-box;
 }
 
-img {
-  height: 50px;
-  width: 50px;
+.title {
+  margin-left: 10px;
+}
+
+.logo-img {
+  height: auto;
+  width: auto;
+  max-height: 50px;
+  max-width: 50px;
 }
 
 .left {
   display: flex;
   align-items: center;
-  gap: 20px;
-  padding: 10px;
   color: white;
-  /* font-family: Arial, Helvetica, sans-serif;  */
-  /* font-family: "Prompt", sans-serif;
-    font-weight: 100;
-    font-style: normal; */
+  padding-left: 10px;
+  cursor: pointer;
 }
 
 .right {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
-  padding: 20px;
+  padding-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .right {
+    display: none;
+  }
 }
 
 .logo {
