--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -1,5 +1,5 @@
 .showcase {
-    background-color: #fbf5db;
+  background-color: #fbf5db;
 }
 
 .showcase-row {
@@ -7,78 +7,61 @@
 }
 
 .showcase-left {
-    flex: 1;
-    display: flex;
-    height: 400px;
-    position: relative;
+  flex: 1;
+  display: flex;
+  height: 400px;
+  position: relative;
 }
 
 .showcase-right {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    height: 400px;
-    position: relative;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  height: 400px;
+  position: relative;
 }
 
 .showcase-left img,
 .showcase-right img {
-    height: 100%;
-    width: auto;
-    max-width: 100%;
+  height: 100%;
+  width: auto;
+  max-width: 100%;
 }
 
 .overlay-div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .showcase-description {
-    background-color: #fbf5db;
-    color: black;
-    padding: 10px;
-    width: 450px;
-    height: 250px;
-    border: 10px solid #e8c45c;
-    outline: 3px solid #c09c3c;
-    box-shadow:  10px 15px 0 #c09c3c;
-    z-index: 10;
-    border-radius: 4px;
+  background-color: #fbf5db;
+  color: black;
+  padding: 10px;
+  width: 450px;
+  height: 250px;
+  border: 10px solid #e8c45c;
+  outline: 3px solid #c09c3c;
+  box-shadow: 10px 15px 0 #c09c3c;
+  z-index: 10;
+  border-radius: 4px;
 }
 
-.overlay-div img {
-    width: 450px;
-    height: 250px;
-    border: 10px solid #70ac44;
-    outline: 3px solid #30442c;
-    box-shadow: -10px 15px 0 #30442c;
-}
-
-.overlay-div h1, p {
-  display: block;
-}
-.overlay-div p {
-  /* margin-bottom: 8px; */
+.showcase-game-image {
+  border: 10px solid #70ac44;
+  outline: 3px solid #30442c;
+  box-shadow: -10px 15px 0 #30442c;
 }
 
 @media (max-width: 768px) {
-    .showcase-row {
-        flex-direction: column;
-    }
+  .showcase-row {
+    flex-direction: column;
+  }
 
-    .showcase-left,
-    .showcase-right {
-      height: auto; /* Let height adjust based on content */
-      width: 100%;  /* Full width of the screen */
-    }
-
-    .showcase-left img:nth-child(1),
-    .showcase-right img {
-        width: 100%;
-        height: auto;
-    }
-    
-
+  .showcase-left img:nth-child(1),
+  .showcase-right img {
+    width: 100%;
+    height: auto;
+  }
 }
