--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -21,49 +21,101 @@
   position: relative;
 }
 
-.showcase-left img,
-.showcase-right img {
+.showcase-background-image {
   height: 100%;
   width: auto;
   max-width: 100%;
 }
 
-.showcase-overlay {
+.showcase-overlay-image,
+.showcase-overlay-description {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 28rem;
+  width: 100%;
   height: auto;
 }
 
-.showcase-description {
-  background-color: #fbf5db;
+.showcase-description-right {
+  text-align: right;
+  padding: 50px;
   color: black;
-  padding: 10px;
-  width: 450px;
-  height: 250px;
-  border: 10px solid #e8c45c;
-  outline: 3px solid #c09c3c;
-  box-shadow: 10px 15px 0 #c09c3c;
-  z-index: 10;
-  border-radius: 4px;
+}
+
+.showcase-description-left {
+  text-align: left;
+  padding: 50px;
+  color: black;
+}
+
+.showcase-game-image-right {
+  height: 15rem;
+  width: auto;
+  text-align: right;
+  margin-right: 10%;
+}
+
+.showcase-game-image-left {
+  height: 15rem;
+  width: auto;
+  text-align: left;
+  margin-left: 10%;
 }
 
 .showcase-game-image {
+  height: 100%;
+  width: auto;
+  max-width: 100%;
   border: 10px solid #70ac44;
   outline: 3px solid #30442c;
   box-shadow: -10px 15px 0 #30442c;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1000px) {
+  .showcase-overlay-description {
+    display: block;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 100%;
+    height: auto;
+  }
+
   .showcase-row {
     flex-direction: column;
   }
 
-  .showcase-left img:nth-child(1),
-  .showcase-right img {
+  .showcase-background-image {
     width: 100%;
     height: auto;
+    max-height: 400px;
+  }
+
+  .showcase-description-left,
+  .showcase-description-right {
+    padding-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: center;
+  }
+
+  .showcase-game-image-left,
+  .showcase-game-image-right {
+    padding: 0px;
+    height: 100%;
+    text-align: center;
+    width: auto;
+    margin: 0px;
+  }
+
+  .showcase-game-image {
+    max-height: 300px;
+    width: auto;
+    max-width: 80%;
+    border: 10px solid #70ac44;
+    outline: 3px solid #30442c;
+    box-shadow: -10px 15px 0 #30442c;
   }
 }
