--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,3 +1,77 @@
 .main-footer {
-    background-color: darkgreen;
+  background-color: #2e472a;
+  padding: 15px 10px 10px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+
+@media (max-width: 1000px) {
+  .main-footer {
+      flex-direction: column;
+      justify-content: center;
+  }
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
+    flex: 1;
+}
+
+.footer-left {
+    justify-content: left !important;
+}
+
+.footer-right {
+    justify-content: right !important;
+}
+
+.logo-container {
+    display: flex;
+    gap: 5px;
+}
+
+.footer-container h1 {
+    margin: 0px;
+    font-size: 24px;
+    color: white;
+}
+
+.copyright-statement {
+    color: white;
+    margin: 0;
+}
+
+.logo-img {
+  height: auto;
+  width: auto;
+  max-height: 40px;
+  max-width: 40px;
+}
+
+.footer-link-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-link-container a {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  padding: 0 10px;
+  border-right: 1px solid #ffffff;
+}
+
+.footer-link-container a:last-child {
+  border-right: none;
 }
