--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,10 +28,8 @@ header {
 }
 
 .logo-img {
-  height: auto;
-  width: auto;
-  max-height: 50px;
-  max-width: 50px;
+    height: 50px;
+    width: 50px;
 }
 
 .left {
