--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,7 @@ code {
   font-family:
     source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.main-content {
+    margin-top: 80px;
+}
