feat: progress on game page

--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -81,7 +81,6 @@
   font-size: 16px;
   transition: background-color 0.3s ease;
   text-decoration: none;
-  color: black;
 }
 
 .showcase-button:hover {
@@ -107,9 +106,12 @@
   height: 100%;
   width: auto;
   max-width: 100%;
-  border: 10px solid #70ac44;
-  outline: 3px solid #30442c;
-  box-shadow: -10px 15px 0 #30442c;
+}
+
+.green-border {
+    border: 10px solid #70ac44;
+    outline: 3px solid #30442c;
+    box-shadow: -10px 15px 0 #30442c;
 }
 
 @media (max-width: 1000px) {
@@ -187,8 +189,5 @@
     max-height: 300px;
     width: auto;
     max-width: 80%;
-    border: 10px solid #70ac44;
-    outline: 3px solid #30442c;
-    box-shadow: -10px 15px 0 #30442c;
   }
 }
