--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .game-header-image {
@@ -23,4 +25,47 @@
   box-shadow: -10px 15px 0 #30442c;
   object-fit: cover;
 }
-.
+
+.game-subheader {
+    margin-top: 60px;
+    margin-bottom: 0px;
+}
+
+.game-title {
+    margin: 0;
+    font-size: 40px;
+}
+
+.game-tags {
+    margin-top: 10px;
+}
+
+.game-description {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.game-button-holder {
+    margin-top: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.game-button {
+    margin: 0;
+    background-color: #70ac44;
+    width: 33%;
+    border: none;
+    border-radius: 8px;
+    padding: 15px 25px;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+    box-shadow: -8px 8px 0 #30442c;
+}
+
+.game-button:hover {
+  background-color: #5a8c36;
+  cursor: pointer;
+}
