--- a/src/styles/page-under-construction.css
+++ b/src/styles/page-under-construction.css
@@ -1,22 +1,22 @@
-.not-found-page {
+.construction-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85;
+  height: 85vh;
   text-align: center;
 }
 
-.not-found-title {
+.construction-title {
   font-size: 3rem;
   margin-bottom: 1rem;
 }
 
-.not-found-text {
+.construction-text {
   font-size: 1.5rem;
 }
 
-.not-found-link {
+.construction-link {
   color: blue;
   text-decoration: underline;
 }
