fixed header logo size issue

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,10 +28,6 @@ header {
   margin-left: 10px;
 }
 
-.logo-img {
-    height: 50px;
-    width: 50px;
-}
 
 .left {
   display: flex;
@@ -54,7 +50,29 @@ header {
   }
 }
 
-.logo {
+.logo-img {
+  gap: 100px;
+}
+
+
+
+.logo-img:nth-child(1) {
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+ 
+}
+
+
+.logo-img:nth-child(2) {
+  right: 10;
+  transform: scale(1.15);
+  transform-origin: center;
+  margin-right: 10px; 
+}
+
+
+/* .logo {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -62,4 +80,4 @@ header {
   height: auto;
   width: auto;
   object-fit: cover;
-}
+} */
