--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -44,8 +44,38 @@ header {
   padding-right: 10px;
 }
 
+.hamburger {
+  display: block;
+  padding-right: 25px;
+  position: relative;
+  z-index: 101;
+  font-size: 30px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+@media (min-width: 769px) {
+  .hamburger {
+    display: none; /* hide on desktop */
+  }
+}
+
+.overlay-cross-button {
+  font-size: clamp(16px, 4vw, 100px);
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+
 @media (max-width: 768px) {
   .right {
+    display: none;
+  }
+  .overlay-cross-button {
     display: none;
   }
 }
