--- a/frontend/src/styles/team.css
+++ b/frontend/src/styles/team.css
@@ -7,7 +7,7 @@
 }
 .green {
 	width: 100%;
-	height: 119px;
+	height: 4rem;
 	background-color: #2d5427;
 }
 
@@ -15,7 +15,8 @@
 	font-family: "Indie Flower", cursive;
 	font-weight: 400;
 	font-style: normal;
-	width: 300px;
+	text-align: center;
+	width: 700px;
 	margin: auto;
 }
 
@@ -48,15 +49,19 @@
 	transform: scale(3);
 }
 
+.team-rocket {
+	font-family: "Inconsolata", monospace;
+	font-weight: 400;
+	vertical-align: middle;
+	text-align: center;
+}
+
 .team {
 	/* margin: 0; */
 	/* padding: 0; */
 	font-size: 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-
+	display: grid;
+	grid-template-columns: repeat(4, 200px);
 	background-color: #f3d06f;
 }
 
