--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -16,19 +16,31 @@
 }
 
 .information {
-	font-family: "Indie Flower", cursive;
-	font-weight: 400;
-	font-style: normal;
+	max-width: 70rem;
+	margin: 5rem auto;
+	padding: 0.2rem;
 	text-align: center;
-	width: 700px;
-	margin: auto;
+
+	font-family: "Indie Flower", cursive;
+	font-style: normal;
+	font-size: 1.8rem;
+}
+
+.information h1 {
+	margin-bottom: 5rem;
+	font-weight: 700;
+}
+
+.information p {
+	margin-top: 1.5rem;
+	margin-bottom: 3rem;
+	line-height: 1.6;
 }
 
 .outer-rectangle {
-	margin-top: 100px;
 	width: 100%;
-	height: 200px;
-	background-color: #30442c;
+	height: 22rem;
+	background-color: #2d5427;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -36,17 +48,24 @@
 
 .inner-rectangle {
 	padding: 2rem;
-	background-color: #f8c44c;
+	background-color: #efe1a1;
 	margin: auto;
-	width: 80%;
+	width: 85%;
+	height: 50%;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	overflow: hidden;
 }
 
 .year {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transform: scale(3);
+	margin: 0;
+	color: #000;
+	text-align: center;
+	font-family: Imprima;
+	font-size: 7rem;
 }
 
 .team {
@@ -87,14 +106,13 @@
 	padding: 0;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 2rem;
+	gap: 1rem;
 }
 
 .team-member {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	text-align: center;
 	padding: 1.5rem 4rem;
 }
 
@@ -105,7 +123,12 @@
 }
 
 .team-member p {
-	margin: 0.3rem;
+	display: flex;
+	text-align: center;
+	font-family: Inconsolata;
+	font-size: 1.3rem;
+	margin-top: 1.5rem;
+	line-height: normal;
 }
 
 .member-page-container {
