--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
 
 .contact-page {
   background-image: url('/images/contact_squares.png');
@@ -105,7 +106,7 @@
   font-size: 1.1rem;
   cursor: pointer;
   width: 11rem;
-  height: 3rem;
+  height: 3.3rem;
   box-shadow: -5px 5px rgba(46, 71, 42, 0.4);
   display: flex;
   align-items: center;
@@ -125,8 +126,8 @@
 }
 
 .not-a-bot-checkbox {
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
 }
 
 .contact-socials-container {
@@ -145,6 +146,86 @@
 .social-card h3 {
     margin: 0;
     font-size: 2rem;
+}
+
+.blur-background > *:not(.popup-overlay) {
+  filter: blur(5px);
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-card {
+  position: relative;
+  background-color: #FBF5DB;
+  padding: 40px;
+  text-align: center;
+  width: 700px;
+  height: 320px;
+  border: 3px solid #2E472A;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup-lines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  object-fit: contain;
+}
+
+.mobile-lines {
+  display: none;
+}
+
+.popup-logo {
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+}
+
+.popup-card p {
+  font-family: 'Tilt Neon', sans-serif;
+  font-size: 2rem;
+  color: #2E4A2A;
+  margin-top: auto;
+  margin-bottom: 20px;
+}
+
+.popup-back-button {
+  background-color: #2E472A;
+  color: #FBF5DB;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 15px;
+  font-family: 'Tilt Warp', sans-serif;
+  font-size: 1.1rem;
+  cursor: pointer;
+  width: 11.5rem;
+  height: 3.2rem;
+  box-shadow: -3px 3px rgba(46, 71, 42, 0.4);
+  transition: transform 0.2s ease-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-back-button:hover {
+  transform: translateY(-2px);
 }
 
 @media (max-width: 900px) {
@@ -193,8 +274,41 @@
     height: 3rem;
     font-size: 1.2rem;
   }
+}
 
+@media (max-width: 800px) {
   .social-card .contact-button {
     width: 12rem;
+  }
+
+  .popup-card {
+    width: 300px;
+    height: 200px;
+    padding: 20px;
+    border: 2px solid #2E472A;
+  }
+
+  .popup-logo {
+    top: 45%;
+    width: 60px;
+  }
+
+  .popup-card p {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+  }
+
+  .popup-back-button {
+    width: 7rem;
+    height: 2rem;
+    font-size: 1rem;
+  }
+
+  .desktop-lines {
+    display: none;
+  }
+
+  .mobile-lines {
+    display: block;
   }
 }
