member details, game details page
Filled in member details from notion.
Implemented the new design of game details page.

--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;700&family=Tilt+Warp&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Imprima&family=Inconsolata&family=Indie+Flower&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Imprima&family=Inconsolata&family=Indie+Flower&family=Rubik:ital@0;1&family=Tilt+Warp&display=swap');
 
 
 
