--- a/src/styles/gif.css
+++ b/src/styles/gif.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  max-width: 800px;
+  max-width: 600px;
   width: 100%;
   margin: 0 auto;
 }
@@ -13,11 +13,21 @@
 }
 
 .giffy .giffy-child-two {
-  margin-right: 12rem;
+  margin-right: 5rem;
+  text-align: center;
+}
+
+.giffy .giffy-child-two h1 {
+  font-family: "Tilt Warp";
 }
 
 .giffy-reverse .giffy-child-two {
-  margin-left: 12rem;
+  margin-left: 5rem;
+  text-align: center;
+}
+
+.giffy-reverse .giffy-child-two h1 {
+  font-family: "Tilt Warp";
 }
 
 @media (max-width: 1000px) {
